# imdb-analytics-platform

./: .dockerignore  .env.template  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-app.yml  lint.yml
app/: agent.py  bigquery_tool.py  chat.py  stats.py
dbt/transform/: .user.yml  profiles.yml
dbt/transform/models/: sources.yml
dbt/transform/models/marts/: dim_actors.sql  dim_directors.sql  movies.sql
dbt/transform/models/staging/: stg_actor.sql  stg_crew.sql  stg_person.sql  stg_ratings.sql  stg_title_basics.sql
docker/: Dockerfile.app  Dockerfile.ingestion
ingestion/: config.py  ingest.py  utils.py
scripts/: run_ingestion.sh  setup_cron.sh
